--- a/avance1.bib
+++ b/avance1.bib
@@ -51,3 +51,34 @@ title = {{A Concept-Based Information Retrieval Approach for User-oriented Knowl
 type = {Master's Thesis},
 year = {2005}
 }
+@misc{Stein2003,
+address = {Paderborn, Alemania},
+author = {Stein, Beno and {Meyer Zu Eissen}, Sven},
+file = {:media/Datos/Lebrixen/Fase\_I/Bibliografia/Miscelanea/stein\_2003e.pdf:pdf;:media/Datos/Lebrixen/Fase\_I/Bibliografia/Miscelanea/stein\_2003e.pdf:pdf},
+institution = {Department of Computer Science Paderborn University.},
+title = {{AI SEARCH: Category Formation of Web Search Results}},
+url = {http://www.uni-weimar.de/cms/medien/webis/research/projects/aisearch.html},
+year = {2003}
+}
+@inproceedings{ThorstenBrants,
+abstract = {Many Natural Language Processing (NLP) techniques have been used in Information Re-
+trieval. The results are not encouraging. Simple methods (stopwording, porter-style stem-
+ming, etc.) usually yield significant improvements, while higher-level processing (chunk-
+ing, parsing, word sense disambiguation, etc.) only yield very small improvements or even
+a decrease in accuracy. At the same time, higher-level methods increase the processing and
+storage cost dramatically. This makes them hard to use on large collections. We review
+NLP techniques and come to the conclusion that (a) NLP needs to be optimized for IR in
+order to be effective and (b) document retrieval is not an ideal application for NLP, at least
+given the current state-of-the-art in NLP. Other IR-related tasks, e.g., question answering
+and information extraction, seem to be better suited.},
+address = {Antwerp, B\'{e}lgica},
+author = {{Thorsten Brants} and Google},
+booktitle = {14th meeting of Computational Linguistics in Netherlands},
+file = {:home/lfborjas/Lebrixen/Fase\_I/Bibliografia/Miscelanea/Natural Language Processing in Information Retrieval.pdf:pdf},
+keywords = {LecturaIntroductoria},
+mendeley-tags = {LecturaIntroductoria},
+publisher = {Google Inc.},
+title = {{Natural Language Processing in Information Retrieval}},
+year = {2004}
+}
+
