--- a/avance1.bib
+++ b/avance1.bib
@@ -81,4 +81,23 @@ publisher = {Google Inc.},
 title = {{Natural Language Processing in Information Retrieval}},
 year = {2004}
 }
-
+@misc{Gipp2009,
+address = {Magdeburg, Alemania},
+author = {Gipp, Bela and Hentschel, Christian},
+file = {:media/Datos/Lebrixen/Fase\_I/Bibliografia/Miscelanea/2009-Scienstein\_-\_A\_Research\_Paper\_Recommender\_System.pdf:pdf},
+institution = {Otto-von-Guericke University, Dept. of Computer Science},
+keywords = {a hybrid recommender,and collaborative-,approach delivers in practice,due to synonyms and,in this paper we,often unsatisfying results,present scienstein 1,system,this,unclear nomenclatures,which uses both content-based},
+pages = {5},
+title = {{Scienstein: A Research Paper Recommender System 1}},
+year = {2009}
+}
+@article{AlexanderGelbukh2005,
+author = {{Alexander Gelbukh} and {Grigori Sidorov} and {Adolfo Guzm\'{a}n-Arenas}},
+file = {:home/lfborjas/Lebrixen/Fase\_I/Bibliografia/Miscelanea/DocumentIndexingConceptHierarchy.pdf:pdf},
+journal = {Computaci\'{o}n y Sistemas},
+number = {4},
+pages = {281--292},
+title = {{Document Indexing with a Concept Hierarchy}},
+volume = {8},
+year = {2005}
+}
