--- a/avance1.bib
+++ b/avance1.bib
@@ -101,3 +101,26 @@ title = {{Document Indexing with a Concept Hierarchy}},
 volume = {8},
 year = {2005}
 }
+@article{Voorhees2002,
+author = {Voorhees, E.M.},
+file = {:media/Datos/Lebrixen/Fase\_I/Bibliografia/Miscelanea/10.1.1.7.7360.pdf:pdf},
+journal = {Lecture Notes in Computer Science},
+pages = {355-370},
+publisher = {Springer},
+title = {{The philosophy of information retrieval evaluation}},
+url = {http://www.springerlink.com/index/VNQ9W8Q6LBE5PLUE.pdf},
+year = {2002}
+}
+@article{Cormack1998,
+address = {New York, New York, USA},
+author = {Cormack, Gordon V. and Palmer, Christopher R. and Clarke, Charles L. a.},
+doi = {10.1145/290941.291009},
+file = {:media/Datos/Lebrixen/Fase\_I/Bibliografia/Miscelanea/10.1.1.18.2141.pdf:pdf},
+isbn = {1581130155},
+journal = {Proceedings of the 21st annual international ACM SIGIR conference on Research and development in information retrieval - SIGIR '98},
+pages = {282--289},
+publisher = {ACM Press},
+title = {{Efficient construction of large test collections}},
+url = {http://portal.acm.org/citation.cfm?doid=290941.291009},
+year = {1998}
+}
